# BigBoxChallenge

./: .env.list  .flake8  .gitignore  Dockerfile  LICENSE  README.md  app.json  core.json  entrypoint.sh  manage.py  pyproject.toml
Bigbox/: settings.py  urls.py  wsgi.py
Bigbox/settings/: base.py  local.py  prod.py  production.py
app/core/: admin.py  api.py  apps.py  filtersets.py  models.py  serializers.py  views.py
app/core/migrations/: 0002_alter_category_color.py  0003_auto_20211022_1242.py
apps/core/: admin.py  api.py  apps.py  models.py  pagination.py  serializers.py
apps/core/migrations/: 0001_initial.py
